# LLM-Council

./: .env.example  .gitignore  README.md  README2.md  info.txt  local_build_backend.py  project_documentation.md.resolved  pyproject.toml  render.yaml  startup.md  task.md.resolved
llm_council/: __init__.py  config.py  credit_check.py  llm_client.py  main.py  prompts.py  pyvenv.cfg  requirements.txt  schemas.py  server.py  settings.py  test_api.py  tracer.py  workflow.py
llm_council/logs/: trace_20251210_102156.md  trace_20251210_102343.md  trace_20251210_102419.md  trace_20251210_105436.md  trace_20251210_112525.md  trace_20251210_113308.md  trace_20251210_115245.md  trace_20251210_134719.md  trace_20251210_140853.md  trace_20251210_142420.md  trace_20251213_114611.md  trace_20251222_161447.md  trace_20251223_124216.md  trace_20251223_124935.md  trace_20251223_125506.md  trace_20251223_130803.md  trace_20251223_131139.md
llm_council/prompts/: 1_generator.txt  2_critic.txt  3_architect.txt  4_finalizer.txt
tests/: test_server.py  test_workflow.py
web/: README.md  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/config/: page.tsx
web/components/: AgentSelector.tsx  CouncilTimeline.tsx  KeepAlive.tsx  PhaseArchitect.tsx  PhaseCritic.tsx  PhaseFinalizer.tsx  PhaseGenerator.tsx  Sidebar.tsx  ThemeSync.tsx
web/lib/: api.ts  councilMeta.ts
web/store/: configState.ts  councilStore.ts  persistState.ts  sessionState.ts  sse.ts  types.ts
web/tests/: configState.test.mts  persistState.test.mts  sessionState.test.mts  sse.test.mts  (+1 more)
