[build-system]
requires = []
build-backend = "local_build_backend"
backend-path = ["."]

[project]
name = "llm-council"
version = "0.2.0"
description = "A multi-agent council for critique, synthesis, and trustworthy final answers."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.127.0",
    "openai>=2.14.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "uvicorn>=0.40.0",
]

[project.scripts]
llm-council = "llm_council.main:cli"
llm-council-api = "llm_council.server:run"
